style: profile useer and add favicon

--- a/app/assets/stylesheets/photos/index.css
+++ b/app/assets/stylesheets/photos/index.css
@@ -23,9 +23,10 @@
 #main .container_ .feeds_container {
   width: 100%;
   flex-grow: 1;
+  /* flex-basis: 1; */
   /* height: 80%; */
   align-items: start;
-  justify-content: start;
+  justify-self: space-between;
 }
 
 /* Post */
@@ -38,6 +39,7 @@
   background-color: #f8f8f8;
   line-height: 1rem;
   width: 45%;
+  align-self: flex-start;
 }
 
 @media screen and (max-width: 992px) {
@@ -89,6 +91,7 @@
 #main .container_ .user_name {
   color: var(--main_color);
   font-weight: bold;
+  flex-grow: 1;
 }
 #main .container_ .card-title {
   font-size: 0.9rem;
@@ -144,4 +147,61 @@
   background-color: var(--main_color);
   border: 1px solid var(--main_color);
   color: #fff;
+}
+
+.custom_btn {
+  --r: 1.5rem; /* radius */
+  --b: 3px; /* border width */
+
+  background: linear-gradient(to bottom left, rgb(254, 12, 12), rgb(252, 157, 23));
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+
+  border-radius: var(--r);
+  height: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.7rem;
+  font-weight: 700;
+  z-index: 0;
+  width: 70px;
+  border: none;
+  right: 0;
+}
+/* check lined question for the detail of the below code */
+.custom_btn::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  border: var(--b) solid transparent;
+  border-radius: var(--r);
+  background: inherit;
+  background-origin: border-box;
+  background-clip: border-box;
+  -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
+/**/
+.custom_btn:hover {
+  color: #fff;
+  -webkit-text-fill-color: #fff;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+}
+
+.custom_btn_followed {
+  color: #fff;
+  -webkit-text-fill-color: #fff;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+}
+
+.custom_btn:hover::before {
+  -webkit-mask: none;
 }
