--- a/app/views/layouts/_rails_default.html.erb
+++ b/app/views/layouts/_rails_default.html.erb
@@ -2,6 +2,7 @@
 <%= csp_meta_tag %>
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 <%= javascript_importmap_tags %>
+<%= favicon_link_tag asset_path('favicon.png') %>
 <!-- Fontawesome -->
 <script
     src="https://kit.fontawesome.com/1f91b0e9aa.js"
