--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,8 +13,8 @@
         </li>
         
         <li>
-            <a href="/my-photo"
-                class="<%= 'is_active' if current_page?(my_photo_path) %>"
+            <a href="/discover/photos"
+                class="<%= 'is_active' if current_page?("/discover/photos") %>"
             >
                 Discovers
             </a>
