--- a/app/views/albums/_card.html.erb
+++ b/app/views/albums/_card.html.erb
@@ -26,6 +26,9 @@
             <span class="username_short">HN</span>
             </div>
             <span class="user_name">Hieu Nguyen</span>
+            <% if request.path.include?('discover') %>
+                <button class="custom_btn custom_btn_followed">Following</button>
+            <% end %>
         </div>
 
         <div class="card-body" style="padding: 0.8rem">
