--- a/app/views/shared/_modal_photo.html.erb
+++ b/app/views/shared/_modal_photo.html.erb
@@ -21,7 +21,7 @@
             <div class="modal-body">
                 <img
                     src="<%= photo.image_url %>"
-                    class="img-fluid"
+                    class="img-fluid w-75"
                     alt=""
                 />
                 <p>
