--- a/app/views/layouts/_rails_default.html.erb
+++ b/app/views/layouts/_rails_default.html.erb
@@ -3,6 +3,10 @@
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 <%= javascript_importmap_tags %>
 <%= favicon_link_tag asset_path('favicon.png') %>
+
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
 <!-- Fontawesome -->
 <script
     src="https://kit.fontawesome.com/1f91b0e9aa.js"
@@ -21,4 +25,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
 ></script>
+
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
