feat: handle preview photos in album creation

--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -10,114 +10,11 @@
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
         <div class="" style="width: 100%">
-            <h5 class="float-start fw-bold">New photo</h5>
+            <h5 class="float-start fw-bold">New album</h5>
             <hr style="width: 100%; border: 2px solid #555" />
         </div>
 
-        <form class="row" style="width: 100%">
-            <div class="col-6">
-                <label for="photo_title">Title</label><br />
-                <input
-                    type="text"
-                    name="photo_title"
-                    placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
-                    style="width: 90%; margin-bottom: 1.5rem"
-                /><br />
-
-                <label for="sharing_mode">Sharing mode</label><br />
-                <select name="sharing_mode" id="">
-                    <option value="">Public</option>
-                    <option value="">Private</option>
-                </select>
-            </div>
-
-            <div class="col-6">
-                <label for="description">Description</label><br />
-                <textarea
-                    name="description"
-                    id=""
-                    cols="50%"
-                    rows="5"
-                    placeholder="Aliquam dictum nec massa ac consequat. Etiam dignissim tincidunt tellus sed vestibulum. Sed vitae vestibulum purus. Curabitur malesuada libero in nibh pretium, sed malesuada nisi feugiat"
-                ></textarea>
-            </div>
-
-            <div class="d-flex flex-wrap" style="gap: 1.5rem">
-                <div
-                    class="card bg-dark text-white border-0 p-0 mt-4 mb-5"
-                    style="max-width: 200px; height: 200px"
-                >
-                    <img
-                    src="https://i.ibb.co/gZyrfvQ/Screenshot-from-2024-06-26-21-10-02.png"
-                    class="card-img"
-                    style="width: 100%; height: 100%; object-fit: cover"
-                    alt="Stony Beach"
-                    />
-                    <div class="card-img-overlay float-start">
-                    <i
-                        class="fa-solid fa-xmark"
-                        style="
-                        float: right;
-                        font-size: 1.5rem;
-                        color: #4f4f4f;
-                        cursor: pointer;
-                        -webkit-text-stroke: 3px #4f4f4f;
-                        "
-                    ></i>
-                    </div>
-                </div>
-                <div
-                    class="card bg-dark text-white border-0 p-0 mt-4 mb-5"
-                    style="max-width: 200px; height: 200px"
-                >
-                    <img
-                    src="https://media.istockphoto.com/id/1401770465/vi/anh/kh%C3%A1i-ni%E1%BB%87m-gi%E1%BA%A3m-chi-ph%C3%AD.webp?s=1024x1024&w=is&k=20&c=7YIGkJT2p4zQ23rd8RJiHtTLl0qSVMIB__6-2RFyDSg="
-                    class="card-img"
-                    style="width: 100%; height: 100%; object-fit: cover"
-                    alt="Stony Beach"
-                    />
-                    <div class="card-img-overlay float-start">
-                        <i
-                            class="fa-solid fa-xmark"
-                            style="
-                            float: right;
-                            font-size: 1.5rem;
-                            color: #4f4f4f;
-                            cursor: pointer;
-                            -webkit-text-stroke: 3px #4f4f4f;
-                            "
-                        ></i>
-                    </div>
-                </div>
-
-                <label
-                    class="card text-white border-1 p-0 mt-4 mb-5 d-flex justify-content-center align-items-center"
-                    style="
-                    width: 200px;
-                    height: 200px;
-                    background-color: #f2f2f2;
-                    border-style: dashed;
-                    cursor: pointer;
-                    "
-                    for="files"
-                    ><i
-                    class="fa-solid fa-plus"
-                    style="
-                        font-size: 4rem;
-                        -webkit-text-stroke: 5px #bdbdbd;
-                        color: #bdbdbd;
-                    "
-                    ></i>
-                </label>
-                <input type="file" id="files" hidden />
-            </div>
-
-            <div>
-                <button class="btn btn-success" style="margin-right: 3rem">
-                    Save
-                </button>
-            </div>
-        </form>
+        <%= render "photos/form", album: @album %>
     </div>
 
     <div class="col-md-2"></div>
