--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @photo, class: "row", style: "width: 100%") do |form| %>
+<%= form_with(model: album, class: "row", style: "width: 100%") do |form| %>
     <div class="col-6">
         <%= form.label :title %><br/>
         <%= form.text_field :title, placeholder: "Photo Title", style: "width: 90%; margin-bottom: 1.5rem" %>
@@ -12,51 +12,54 @@
         <%= form.text_area :description, placeholder: "Photo Description", size: "50x5", style: "width: 90%; margin-bottom: 1.5rem" %>
     </div>
 
-    <div class="d-flex flex-wrap" style="gap: 1.5rem">
-        <div
-            class="card bg-dark text-white border-0 p-0 mt-4 mb-5"
-            style="max-width: 200px; height: 200px"
-        >
-            <img
-                class="card-img"
-                style="width: 100%; height: 100%; object-fit: cover"
-                id= "thumbnail-img"
-            />
-            <div class="card-img-overlay float-start">
+    <div id="thumbnail-container" class="d-flex flex-wrap" style="gap: 1.5rem">
+        <%= fields_for :photos do |photo| %>
+            <div
+                class="card bg-dark text-white border-0 p-0 mt-4 d-none"
+                style="max-width: 200px; height: 200px"
+                id="thumbnail-card"
+            >
+                <img
+                    class="card-img"
+                    style="width: 100%; height: 100%; object-fit: cover"
+                    id= "thumbnail-img"
+                />
+                <div class="card-img-overlay float-start">
+                    <i
+                        class="fa-solid fa-xmark"
+                        style="
+                            float: right;
+                            font-size: 1.5rem;
+                            color: #4f4f4f;
+                            cursor: pointer;
+                            -webkit-text-stroke: 3px #4f4f4f;
+                        "
+                    ></i>
+                </div>
+            </div>
+
+            <label
+                class="card text-white border-1 p-0 mt-4 mb-5 d-flex justify-content-center align-items-center"
+                style="
+                    width: 200px;
+                    height: 200px;
+                    background-color: #f2f2f2;
+                    border-style: dashed;
+                    cursor: pointer;
+                "
+                for="files_inputs"
+            >
                 <i
-                    class="fa-solid fa-xmark"
+                    class="fa-solid fa-plus"
                     style="
-                        float: right;
-                        font-size: 1.5rem;
-                        color: #4f4f4f;
-                        cursor: pointer;
-                        -webkit-text-stroke: 3px #4f4f4f;
+                        font-size: 4rem;
+                        -webkit-text-stroke: 5px #bdbdbd;
+                        color: #bdbdbd;
                     "
                 ></i>
-            </div>
-        </div>
-
-        <label
-            class="card text-white border-1 p-0 mt-4 mb-5 d-flex justify-content-center align-items-center"
-            style="
-                width: 200px;
-                height: 200px;
-                background-color: #f2f2f2;
-                border-style: dashed;
-                cursor: pointer;
-            "
-            for="files_inputs"
-        >
-            <i
-                class="fa-solid fa-plus"
-                style="
-                    font-size: 4rem;
-                    -webkit-text-stroke: 5px #bdbdbd;
-                    color: #bdbdbd;
-                "
-            ></i>
-        </label>
-        <%= form.file_field(:image_url, class: "d-none", id: "files_inputs") %>
+            </label>
+            <%= photo.file_field(:image_url, multiple: true, class: "d-none", id: "files_inputs") %>
+        <% end %>
     </div>
 
     <div>
@@ -67,15 +70,19 @@
 <script>
 
     $(document).on('ready', function() {
-        console.log("Check here")
         handle_preview($("#files_inputs"), $("#thumbnail-img"));
     });
 
     function readURL(input, image) {
-        if (input.files && input.files[0]) {
+        if (input.files) {
+            console.log(input.files);
             var reader = new FileReader();
-                reader.onload = function(e) {
-                image.attr('src', e.target.result);
+            reader.onload = function(e) {
+                const last_thumbnail = $('#thumbnail-container div#thumbnail-card:last')
+                const thumbnail_card = last_thumbnail.clone();
+                thumbnail_card.removeClass("d-none");
+                thumbnail_card.find("#thumbnail-img").attr('src', e.target.result);
+                last_thumbnail.after(thumbnail_card);
             }
             reader.readAsDataURL(input.files[0]);
         }
