--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -148,6 +148,21 @@
   border: none;
 }
 
+.edit_profile_btn {
+  width: 130px;
+  border-radius: 1.5rem;
+  height: 35px;
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid var(--main_color);
+  background-color: #fff;
+  color: var(--main_color);
+  text-decoration: none;
+}
+
 #public_profile_main .user_info .navigation.active_profile_nav {
   color: var(--main_color);
 }
