--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,9 +21,17 @@
         <% if user_signed_in? %>
             <div class="post_user_info">
                     <div class="dropdown">
-                        <div class="default_avatar">
-                            <span class="username_short"><%= current_user.first_name[0] + current_user.last_name[0] %></span>
-                        </div>
+                        <% if !current_user.avatar %>
+                            <div class="default_avatar">
+                                <span class="username_short"><%= current_user.first_name[0] + current_user.last_name[0] %></span>
+                            </div>
+                        <% else %>
+                            <img
+                                src="<%= current_user.avatar %>"
+                                style="width: 2.5rem; height: 2.5rem; border-radius: 50%;
+                                object-fit: cover"
+                            >
+                        <% end %>
 
                         <ul
                             class="dropdown-menu dropdown-menu-none dropdown-menu-lg-start d-md-none bg-light"
@@ -48,7 +56,10 @@
                         </ul>
                     </div>
 
-                    <span class="user_name d-none d-md-block"><%= current_user.first_name + current_user.last_name %></span>
+                    <span ></span>
+                    <%= link_to("users/#{current_user.id}/photos", class: "user_name d-none d-md-block") do %>
+                        <%= current_user.first_name + current_user.last_name %>
+                    <% end %>
                     <span
                         class="user_name d-block d-md-none dropdown-toggle"
                         id="dropdownMenuButton1"
