--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,3 @@
-
 <main id="edit_user_main" class="row m-0">
   <%= render "layouts/sidebar" %>
 
@@ -11,7 +10,7 @@
     </div>
 
     <!-- Content -->
-    <%= form_with(model: @user, class: "form-container mb-4") do |form| %>
+    <%= form_with(model: @user, class: "form-container") do |form| %>
       <!-- Change avatar -->
       <label
         for="files"
@@ -77,37 +76,23 @@
       </div>
     <% end %>
 
-
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form-container" } ) do |f| %>
-      <h5
-        class="fw-bold"
-        style="color: var(--main_color);"
-      >
-        Password
-      </h5>
-      <%= render "users/shared/error_messages", resource: resource %>
-
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
+    <%= form_with(model: @user, url: password_path(@user), html: { method: :put }, class: "form-container") do |f| %>
+      <%= f.hidden_field :reset_password_token %>
 
       <div class="input-wrapper">
-        <%= f.label :current_password %><br />
-        <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control", placeholder: "******" %>
+        <%= f.label :password, "New password" %><br />
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
       </div>
 
       <div class="input-wrapper">
-        <%= f.label :password %>
-        <%= f.password_field :password, autocomplete: "new-password", placeholder: "#{@minimum_password_length} characters minimum", class: "form-control" %>
-        
+        <%= f.label :password_confirmation, "Confirm new password" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
       </div>
 
-      <div class="input-wrapper">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "******" %>
-      </div>
-
-      <div class="actions" style="width: 25%">
+      <div style="width: 25%">
         <%= f.submit "Save", class: "btn btn-success" %>
       </div>
     <% end %>
