--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,24 +17,11 @@
             </div>
 
             <div>
-                <button class="custom_btn">Following</button>
-                <!-- <button
-                    style="
-                    width: 130px;
-                    border-radius: 1.5rem;
-                    height: 35px;
-                    font-size: 1.2rem;
-                    font-weight: 700;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    border: 4px solid var(--main_color);
-                    background-color: #fff;
-                    color: var(--main_color);
-                    "
-                >
-                    Edit profile
-                </button> -->
+                <% if current_user || params[:id] == current_user.id %>
+                    <%= link_to "Edit profile", edit_user_registration_path, class: "edit_profile_btn" %>
+                <% else %>
+                    <button class="custom_btn">Following</button>
+                <% end %>
                 <h1
                     class="my-0"
                     style="font-weight: bold; margin: 0.8rem 0; font-size: 2rem"
