--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,11 @@
                 <% if current_user || params[:id] == current_user.id %>
                     <%= link_to "Edit profile", edit_user_registration_path, class: "edit_profile_btn" %>
                 <% else %>
-                    <button class="custom_btn">Following</button>
+                    <% if current_user.following?(@user) %>
+                        <%= render 'unfollow_btn' %>
+                    <% else %>
+                        <%= render 'follow_btn' %>
+                    <% end %>
                 <% end %>
                 <h1
                     class="my-0"
