--- a/app/assets/stylesheets/photos/index.css
+++ b/app/assets/stylesheets/photos/index.css
@@ -31,6 +31,7 @@
 
 /* Post */
 #main .container_ .card.photo {
+  width: 45%;
   text-decoration: none;
   margin: 0 1rem;
   border: none;
@@ -38,13 +39,14 @@
   padding: 0;
   background-color: #f8f8f8;
   line-height: 1rem;
-  width: 45%;
   align-self: flex-start;
+  flex-direction: row;
 }
 
 @media screen and (max-width: 992px) {
   #main .container_ .card.photo {
     width: 100%;
+    height: "";
   }
   #main .container_ .feeds_container {
     height: auto;
@@ -61,11 +63,10 @@
 }
 
 #main .container_ .photo_container {
-  height: 100%;
-  /* height: 80%;
-    padding: 2rem; */
+  height: 255px;
 }
 #main .container_ .img-fluid {
+  height: 100%;
   object-fit: cover;
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
