--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -1,11 +1,10 @@
-<a class="card photo" data-bs-toggle="modal"
-      data-bs-target="#<%= photo.id %>">
-    <div class="row g-0">
+<a class="card photo" data-bs-target="#<%= photo.id %>" onclick="toggleModal('<%= photo.id%>')">
+    <div class="row g-0 w-100">
         <div class="col-lg-6">
             <div class="photo_container">
                 <img
                     src="<%= photo.image_url %>"
-                    class="img-fluid h-100"
+                    class="img-fluid"
                     alt="photo"
                 />
             </div>
@@ -17,7 +16,11 @@
                 </div>
                 <span class="user_name"><%= photo.user.first_name + photo.user.last_name %></span>  
                 <% if request.path.include?('discover') %>
-                    <button class="custom_btn custom_btn_followed">Following</button>
+                    <% if current_user.followers.pluck(:id).include?(photo.user.id) %>
+                        <%= render 'users/unfollow_btn', user: photo.user %>
+                    <% else %>
+                        <%= render 'users/follow_btn', user: photo.user %>
+                    <% end %>
                 <% end %>
             </div>
 
