--- a/app/views/photos/photo_feeds.html.erb
+++ b/app/views/photos/photo_feeds.html.erb
@@ -26,3 +26,12 @@
 
     <div class="col-2"></div>
 </main>
+
+<script>
+    function toggleModal(id) {
+        var modal = new bootstrap.Modal(document.getElementById(id), {
+            keyboard: false
+        });
+        modal.show();
+    }
+</script>
