--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -16,7 +16,7 @@
                 </div>
                 <span class="user_name"><%= photo.user.first_name + photo.user.last_name %></span>  
                 <% if request.path.include?('discover') %>
-                    <% if current_user.followers.pluck(:id).include?(photo.user.id) %>
+                    <% if current_user && current_user.followers.pluck(:id).include?(photo.user.id) %>
                         <%= render 'users/unfollow_btn', user: photo.user %>
                     <% else %>
                         <%= render 'users/follow_btn', user: photo.user %>
