feat: photo reaction

--- a/app/views/layouts/_rails_default.html.erb
+++ b/app/views/layouts/_rails_default.html.erb
@@ -27,4 +27,5 @@
 ></script>
 
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/rails/jquery-ujs/src/rails.js"></script>
 
