--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,7 @@
     <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= render 'layouts/rails_default' %>
-    <%= javascript_importmap_tags %>
-    <%= javascript_include_tag "jquery" %>
+    <%= javascript_include_tag :jquery %>
     
   </head>
 
