--- a/app/views/photos/photo_feeds.html.erb
+++ b/app/views/photos/photo_feeds.html.erb
@@ -34,4 +34,54 @@
         });
         modal.show();
     }
+
+    const setDebounce = (func, delay) => {
+        let debounce;
+        return function () {
+            const context = this;
+            const args = arguments;
+            clearTimeout(debounce);
+            debounce = setTimeout(() => func.apply(context, args), delay);
+        };
+    };
+
+    const sendRequest = (url, method, data, callback) => {
+        $.ajax({
+            url: url,
+            type: method,
+            dataType: 'script',
+            contentType: "text/javascript",
+            success: callback(data),
+            error: function (error) {
+                console.log(error);
+            }
+        });
+    }
+
+    // Using debounce for heart button
+    /* document.querySelectorAll('.fa-heart').forEach((icon) => {
+        icon.addEventListener('click', setDebounce((e) => {
+            const heartIcon = e.target;
+            const photoId = heartIcon.closest('.card').dataset.id;
+            const heartCount = heartIcon.querySelector('span');
+            console.log(heartIcon, photoId, heartCount)
+            if (heartIcon.classList.contains('text-secondary')){
+                sendRequest(`/photos_reactions/${photoId}`, 'POST', { photo_id: photoId }, (data) => {
+                    heartIcon.classList.remove('text-secondary');
+                    heartCount.textContent = parseInt(heartCount.textContent) + 1;
+                });
+            } else {
+                sendRequest(`/photos_reactions/${photoId}`, 'DELETE', null, (data) => {
+                    heartIcon.classList.add('text-secondary');
+                    heartCount.textContent = parseInt(heartCount.textContent) - 1;
+                });
+            }
+        }, 1000));
+    });*/
+    // Prevent the modal from showing when clicking the heart icon
+    document.querySelectorAll('.fa-heart').forEach((icon) => {
+        icon.addEventListener('click', (e) => {
+            e.stopPropagation();
+        });
+    });
 </script>
