--- a/app/views/albums/_card.html.erb
+++ b/app/views/albums/_card.html.erb
@@ -40,7 +40,7 @@
                     <%= album.description %>
                 </p>
                 <div class="post_createdAt">
-                    <i class="fa fa-heart" style="color: var(--main_color)"
+                    <i class="fa fa-heart" style="color: var(--main_color); cursor: pointer"
                         >&nbsp;<span><%= album.number_like %></span></i
                     >
                     <small class="text-body-secondary"
