--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -29,11 +29,13 @@
                 <p class="card-text"><%= photo.description %></p>
             </div>
             <div class="post_createdAt">
-                <% if current_user && current_user.photos_reactions.pluck(:photo_id).include?(photo.id)  %>
-                    <%= render "unreact",  photo: photo  %>
-                <% else %>
-                    <%= render "react", photo: photo  %>
-                <% end %>
+                <div class="photo_react">
+                    <% if current_user && current_user.photos_reactions.pluck(:photo_id).include?(photo.id)  %>
+                        <%= render "unreact",  photo: photo  %>
+                    <% else %>
+                        <%= render "react", photo: photo  %>
+                    <% end %>
+                </div>
                 <small class="text-body-secondary">
                     <%= photo.created_at %>
                 </small>
