--- a/app/views/photos_reactions/create.js.erb
+++ b/app/views/photos_reactions/create.js.erb
@@ -1,2 +1,7 @@
-$(".card.photo .post_createdAt").html("<%= escape_javascript(render('photos/unreact', photo: @photo)) %>");
+$(".photo_react").html("<%= escape_javascript(render('photos/unreact', photo: @photo)) %>");
 $("#number_of_like").html('<%= @photo.number_like %>');
+document.querySelectorAll('.fa-heart').forEach((icon) => {
+    icon.addEventListener('click', (e) => {
+        e.stopPropagation();
+    });
+});
