fix: photo discover propagation

--- a/app/views/photos/discover.html.erb
+++ b/app/views/photos/discover.html.erb
@@ -40,4 +40,10 @@
             e.stopPropagation();
         });
     });
+
+    document.querySelectorAll('.fa-heart').forEach((icon) => {
+        icon.addEventListener('click', (e) => {
+            e.stopPropagation();
+        });
+    });
 </script>
