--- a/app/views/photos/discover.html.erb
+++ b/app/views/photos/discover.html.erb
@@ -85,6 +85,27 @@
         }, 3000));
     });
 
+    // Using debounce for follow/unfollow button
+    document.querySelectorAll('.custom_btn').forEach((btn) => {
+        btn.addEventListener('click', setDebounce((e) => {
+            const followBtn = e.target;
+            const userId = followBtn.closest('.card').dataset.user;
+            console.log(followBtn, userId, followBtn.classList.contains('custom_btn_followed'))
+            if (!followBtn.classList.contains('custom_btn_followed')){
+                sendRequest(`/follows`, 'POST', { follower_id: userId }, (data) => {
+                    // add class custom_btn_followed to all buttons of photos that have been followed
+                    followBtn.classList.add('custom_btn_followed');
+                    followBtn.textContent = 'Following';
+                });
+            } else {
+                sendRequest(`/follows/${userId}`, 'DELETE', null, (data) => {
+                    followBtn.classList.remove('custom_btn_followed');
+                    followBtn.textContent = 'Follow';
+                });
+            }
+        }, 1000));
+    });
+
     document.querySelectorAll('.fa-heart').forEach((icon) => {
         icon.addEventListener('click', (e) => {
             e.stopPropagation();
