--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -14,7 +14,7 @@
         
         <li>
             <a href="/discover/photos"
-                class="<%= 'is_active' if current_page?("/discover/photos") %>"
+                class="<%= 'is_active' if current_page?("/discover/photos") || current_page?("/discover/albums") %>"
             >
                 Discovers
             </a>
