--- a/app/views/albums/discover.html.erb
+++ b/app/views/albums/discover.html.erb
@@ -43,6 +43,16 @@
         });
     });
 
+    // Prevent propagation for user_info_part
+    document.querySelectorAll('.user_info_part').forEach((user_info_part) => {
+        user_info_part.addEventListener('click', (e) => {
+            e.stopPropagation();
+            // navigate to user profile
+            const userId = user_info_part.closest('.card').dataset.user;
+            window.location.href = `/users/${userId}/photos`;
+        });
+    });
+
     const setDebounce = (func, delay) => {
         let debounce;
         return function () {
