--- a/app/views/users/_show_photo.html.erb
+++ b/app/views/users/_show_photo.html.erb
@@ -1,5 +1,5 @@
 <% if @photos.present? %>
-    <div class="row">
+    <div class="row list_photos_user">
         <% @photos.each do |photo| %>
             <div class="col-md-3 p-3">
                 <img
