--- a/app/views/albums/_card.html.erb
+++ b/app/views/albums/_card.html.erb
@@ -22,14 +22,14 @@
         <div class="col-lg-6">
             <div class="post_user_info">
                 <div class="user_info_part">
-                    <% if photo.user.avatar %>
-                        <img src="<%= photo.user.avatar %>" class="default_avatar" alt="avatar" />
+                    <% if album.user.avatar.present? %>
+                        <img src="<%= album.user.avatar %>" class="default_avatar" alt="avatar" />
                     <% else %>
                         <div class="default_avatar">
-                            <span class="username_short"><%= photo.user.first_name[0] + photo.user.last_name[0] %></span>
+                            <span class="username_short"><%= album.user.first_name[0] + album.user.last_name[0] %></span>
                         </div>
                     <% end %>
-                    <span class="user_name"><%= photo.user.first_name + photo.user.last_name %></span>  
+                    <span class="user_name"><%= album.user.first_name + album.user.last_name %></span>  
                 </div>
                 <% if request.path.include?('discover') %>
                     <button class="custom_btn <%= current_user && current_user.followers.pluck(:id).include?(album.user.id) ? "custom_btn_followed" : "" %>" id="follow_btn">
