--- a/app/views/albums/discover.html.erb
+++ b/app/views/albums/discover.html.erb
@@ -76,6 +76,27 @@
         });
     }
 
+    // Using debounce for heart button
+    document.querySelectorAll('.fa-heart').forEach((icon) => {
+        icon.addEventListener('click', setDebounce((e) => {
+            const heartIcon = e.target;
+            const albumId = heartIcon.closest('.card').dataset.id;
+            const heartCount = heartIcon.querySelector('span');
+            console.log(heartIcon, albumId, heartCount)
+            if (heartIcon.classList.contains('text-secondary')){
+                sendRequest(`/albums_reactions`, 'POST', { album_id: albumId }, (data) => {
+                    heartIcon.classList.remove('text-secondary');
+                    heartCount.textContent = parseInt(heartCount.textContent) + 1;
+                });
+            } else {
+                sendRequest(`/albums_reactions/${albumId}`, 'DELETE', null, (data) => {
+                    heartIcon.classList.add('text-secondary');
+                    heartCount.textContent = parseInt(heartCount.textContent) - 1;
+                });
+            }
+        }, 3000));
+    });
+
     // Using debounce for follow/unfollow button
     document.querySelectorAll('.custom_btn').forEach((btn) => {
         btn.addEventListener('click', setDebounce((e) => {
